# k8s-error-experiment

./: Cargo.toml  README.md  crd.yaml  create_with_creation_timestamp.rs  create_with_dangling_reference.rs  create_with_deletion_timestamp.rs  create_with_inconsistent_namespace.rs  create_with_invalid_name.rs  create_with_multiple_controller_reference.rs  create_with_owner_reference_in_different_ns.rs  create_with_rv.rs  create_with_status.rs  create_with_uid.rs  create_without_name.rs  delete_configmap.rs  delete_configmap_with_finalizer.rs  delete_param.rs  delete_pod.rs  delete_stateful_set.rs  get_cr.rs  inconsistent_namespace.rs  patch_owner_references.rs  update_cr_with_no_rv.rs  update_creation_timestamp.rs  update_generate_name.rs  update_labels.rs  update_owner_reference.rs  update_owner_reference2.rs  update_uid.rs  update_with_fake_rv.rs  update_with_inconsistent_metadata.rs  update_with_no_change.rs  update_with_no_rv.rs  update_with_no_rv_and_no_change.rs  update_with_old_rv.rs  update_without_name.rs  update_without_namespace.rs
