[package]
name = "k8s-error-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["openssl-tls", "kubederive", "ws", "latest", "runtime"]
kubederive = ["kube/derive"]
openssl-tls = ["kube/client", "kube/openssl-tls"]
rustls-tls = ["kube/client", "kube/rustls-tls"]
runtime = ["kube/runtime"]
ws = ["kube/ws"]
latest = ["k8s-openapi/v1_26"]

[dependencies]
tokio-util = "0.7.0"
anyhow = "1.0.44"
chrono = { version = "0.4.1", default-features = false, features = [
	"alloc", # for chrono::DateTime::<Utc>::to_rfc3339_opts
	"serde", # for chrono::DateTime<Utc>: serde::Deserialize, serde::Serialize
] }
futures = "0.3.17"
kube = { version = "0.78.0", default-features = false, features = ["admission"] }
kube-derive = { version = "0.78.0", default-features = false } # only needed to opt out of schema
kube-client = { version = "0.78.0", default-features = false }
kube-core = { version = "0.78.0", default-features = false }
k8s-openapi = { version = "0.17.0", default-features = false }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"
tokio = { version = "1.14.0", features = ["full"] }
schemars = "0.8.6"
tracing = "0.1.36"
tracing-subscriber = "0.3.3"
http = "0.2.5"
thiserror = "1.0.29"
tokio-stream = { version = "0.1.9", features = ["net"] }

[[example]]
name = "create_with_invalid_name"
path = "create_with_invalid_name.rs"

[[example]]
name = "create_with_status"
path = "create_with_status.rs"

[[example]]
name = "create_with_creation_timestamp"
path = "create_with_creation_timestamp.rs"

[[example]]
name = "create_with_uid"
path = "create_with_uid.rs"

[[example]]
name = "create_with_rv"
path = "create_with_rv.rs"

[[example]]
name = "create_without_name"
path = "create_without_name.rs"

[[example]]
name = "create_with_inconsistent_namespace"
path = "create_with_inconsistent_namespace.rs"

[[example]]
name = "update_with_no_rv"
path = "update_with_no_rv.rs"

[[example]]
name = "update_with_old_rv"
path = "update_with_old_rv.rs"

[[example]]
name = "update_with_inconsistent_metadata"
path = "update_with_inconsistent_metadata.rs"

[[example]]
name = "update_with_fake_rv"
path = "update_with_fake_rv.rs"

[[example]]
name = "update_with_no_change"
path = "update_with_no_change.rs"

[[example]]
name = "update_with_no_rv_and_no_change"
path = "update_with_no_rv_and_no_change.rs"

[[example]]
name = "update_creation_timestamp"
path = "update_creation_timestamp.rs"

[[example]]
name = "update_uid"
path = "update_uid.rs"

[[example]]
name = "update_generate_name"
path = "update_generate_name.rs"
