[package]
name = "k8s-error-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["openssl-tls", "kubederive", "ws", "latest", "runtime"]
kubederive = ["kube/derive"]
openssl-tls = ["kube/client", "kube/openssl-tls"]
rustls-tls = ["kube/client", "kube/rustls-tls"]
runtime = ["kube/runtime"]
ws = ["kube/ws"]
latest = ["k8s-openapi/v1_26"]

[dependencies]
anyhow = "1.0.44"
chrono = { version = "0.4.1", default-features = false, features = [
	"alloc", # for chrono::DateTime::<Utc>::to_rfc3339_opts
	"serde", # for chrono::DateTime<Utc>: serde::Deserialize, serde::Serialize
] }
futures = "0.3.17"
kube = { version = "0.78.0", default-features = false, features = ["admission"] }
kube-derive = { version = "0.78.0", default-features = false } # only needed to opt out of schema
kube-client = { version = "0.78.0", default-features = false }
kube-core = { version = "0.78.0", default-features = false }
k8s-openapi = { version = "0.17.0", default-features = false }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"
tokio = { version = "1.14.0", features = ["full"] }
schemars = "0.8.6"
tracing = "0.1.36"
tracing-subscriber = "0.3.3"
http = "0.2.5"
thiserror = "1.0.29"
tokio-stream = { version = "0.1.9", features = ["net"] }
either = "1.8.1"

[[example]]
name = "get_cr"
path = "get_cr.rs"

[[example]]
name = "create_with_multiple_controller_reference"
path = "create_with_multiple_controller_reference.rs"

[[example]]
name = "create_with_owner_reference_in_different_ns"
path = "create_with_owner_reference_in_different_ns.rs"

[[example]]
name = "create_with_dangling_reference"
path = "create_with_dangling_reference.rs"

[[example]]
name = "create_with_invalid_name"
path = "create_with_invalid_name.rs"

[[example]]
name = "create_with_status"
path = "create_with_status.rs"

[[example]]
name = "create_with_creation_timestamp"
path = "create_with_creation_timestamp.rs"

[[example]]
name = "create_with_deletion_timestamp"
path = "create_with_deletion_timestamp.rs"

[[example]]
name = "create_with_uid"
path = "create_with_uid.rs"

[[example]]
name = "create_with_rv"
path = "create_with_rv.rs"

[[example]]
name = "create_without_name"
path = "create_without_name.rs"

[[example]]
name = "create_with_inconsistent_namespace"
path = "create_with_inconsistent_namespace.rs"

[[example]]
name = "delete_pod"
path = "delete_pod.rs"

[[example]]
name = "delete_stateful_set"
path = "delete_stateful_set.rs"

[[example]]
name = "delete_param"
path = "delete_param.rs"

[[example]]
name = "delete_configmap"
path = "delete_configmap.rs"

[[example]]
name = "delete_configmap_with_finalizer"
path = "delete_configmap_with_finalizer.rs"

[[example]]
name = "update_cr_with_no_rv"
path = "update_cr_with_no_rv.rs"

[[example]]
name = "update_with_no_rv"
path = "update_with_no_rv.rs"

[[example]]
name = "update_with_old_rv"
path = "update_with_old_rv.rs"

[[example]]
name = "update_with_inconsistent_metadata"
path = "update_with_inconsistent_metadata.rs"

[[example]]
name = "update_with_fake_rv"
path = "update_with_fake_rv.rs"

[[example]]
name = "update_with_no_change"
path = "update_with_no_change.rs"

[[example]]
name = "update_with_no_rv_and_no_change"
path = "update_with_no_rv_and_no_change.rs"

[[example]]
name = "update_creation_timestamp"
path = "update_creation_timestamp.rs"

[[example]]
name = "update_uid"
path = "update_uid.rs"

[[example]]
name = "update_owner_reference"
path = "update_owner_reference.rs"

[[example]]
name = "update_owner_reference2"
path = "update_owner_reference2.rs"

[[example]]
name = "update_generate_name"
path = "update_generate_name.rs"

[[example]]
name = "update_labels"
path = "update_labels.rs"

[[example]]
name = "update_without_name"
path = "update_without_name.rs"

[[example]]
name = "update_without_namespace"
path = "update_without_namespace.rs"

[[example]]
name = "patch_owner_references"
path = "patch_owner_references.rs"
